--- a/matrix_multiplication.ipynb
+++ b/matrix_multiplication.ipynb
@@ -96,7 +96,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Operation 'PrintV2_5' type=PrintV2>"
+              "2019-12-06 21:42:26.858704: I tensorflow/core/platform/profile_utils/cpu_utils.cc:94] CPU Frequency: 2594305000 Hz
+2019-12-06 21:42:26.859667: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x37c2630 executing computations on platform Host. Devices:
+2019-12-06 21:42:26.859803: I tensorflow/compiler/xla/service/service.cc:175]   StreamExecutor device (0): Host, Default Version
+tf.Tensor(
+[[ 82.  88.  94. 100. 106.]
+ [190. 205. 220. 235. 250.]], shape=(2, 5), dtype=float32)
+"
             ]
           },
           "metadata": {
