--- a/matrix_multiplication.ipynb
+++ b/matrix_multiplication.ipynb
@@ -96,7 +96,9 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Operation 'PrintV2_5' type=PrintV2>"
+              "[[ 82.  88.  94. 100. 106.]"
+               " [190. 205. 220. 235. 250.]], shape=(2, 5), dtype=float32)"
+            
             ]
           },
           "metadata": {
