--- a/matrix_multiplication.ipynb
+++ b/matrix_multiplication.ipynb
@@ -28,14 +28,15 @@
       "metadata": {
         "id": "zfqeNMkgi21d",
         "colab_type": "code",
-        "outputId": "eb091fc7-9723-4b3c-898c-8795e87e5138",
+        "outputId": "f715c0e2-ec58-48a0-a5a6-ac8a422fc965",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 593
         }
       },
       "source": [
         "import tensorflow as tf\n",
+        "sess = tf.InteractiveSession()\n",
         "m=[]\n",
         "n=[]\n",
         "a= int(input('entetr the row  1:'))\n",
@@ -57,10 +58,19 @@
         "x = tf.constant(m, shape=[a, b])\n",
         "y = tf.constant(n, shape=[c, d])\n",
         "z = tf.matmul(x,y)\n",
-        "tf.print(z)"
+        "print(\"\\n THe result is :\\n\")\n",
+        "print(z.eval())"
       ],
-      "execution_count": 20,
+      "execution_count": 32,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow_core/python/client/session.py:1750: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
+            "  warnings.warn('An interactive session is already active. This can '\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -88,23 +98,14 @@
             "enter the elements matrix 2:18\n",
             "enter the elements matrix 2:19\n",
             "enter the elements matrix 2:20\n",
-            "enter the elements matrix 2:21\n"
+            "enter the elements matrix 2:21\n",
+            "\n",
+            " THe result is :\n",
+            "\n",
+            "[[ 82.  88.  94. 100. 106.]\n",
+            " [190. 205. 220. 235. 250.]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[ 82.  88.  94. 100. 106.]"
-               " [190. 205. 220. 235. 250.]], shape=(2, 5), dtype=float32)"
-            
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
         }
       ]
     }
