--- a/matrix_multiplication.ipynb
+++ b/matrix_multiplication.ipynb
@@ -28,82 +28,50 @@
       "metadata": {
         "id": "zfqeNMkgi21d",
         "colab_type": "code",
-        "outputId": "f715c0e2-ec58-48a0-a5a6-ac8a422fc965",
+        "outputId": "0f9e258c-04b1-4c38-8080-49adcf271730",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 593
+          "height": 151
         }
       },
       "source": [
         "import tensorflow as tf\n",
         "sess = tf.InteractiveSession()\n",
-        "m=[]\n",
-        "n=[]\n",
-        "a= int(input('entetr the row  1:'))\n",
-        "b= int(input('entetr the column 1:'))\n",
-        "c= int(input('entetr the row 2:'))\n",
-        "d= int(input('entetr the column 2:'))\n",
-        "for i in range (a):\n",
-        "\tl1=[]\n",
-        "\tfor j in range(b):\n",
-        "\t\tx=float(input('enter the elements matrix 1:'))\n",
-        "\t\tl1.append(x)\n",
-        "\tm.append(l1)\n",
-        "for i in range (c):\n",
-        "\tl2=[]\n",
-        "\tfor j in range(d):\n",
-        "\t\ty=float(input('enter the elements matrix 2:'))\n",
-        "\t\tl2.append(y)\n",
-        "\tn.append(l2)\n",
-        "x = tf.constant(m, shape=[a, b])\n",
-        "y = tf.constant(n, shape=[c, d])\n",
+        "\n",
+        "x = tf.random_normal(shape=[2,3], mean=0.0, stddev=1.0, dtype=tf.float32, seed=None, name=None)\n",
+        "y = tf.random_normal(shape=[3,5], mean=0.0, stddev=1.0, dtype=tf.float32, seed=None, name=None)\n",
         "z = tf.matmul(x,y)\n",
         "print(\"\\n THe result is :\\n\")\n",
         "print(z.eval())"
       ],
-      "execution_count": 32,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/tensorflow_core/python/client/session.py:1750: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
-            "  warnings.warn('An interactive session is already active. This can '\n"
-          ],
-          "name": "stderr"
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         },
         {
           "output_type": "stream",
           "text": [
-            "entetr the row  1:2\n",
-            "entetr the column 1:3\n",
-            "entetr the row 2:3\n",
-            "entetr the column 2:5\n",
-            "enter the elements matrix 1:1\n",
-            "enter the elements matrix 1:2\n",
-            "enter the elements matrix 1:3\n",
-            "enter the elements matrix 1:4\n",
-            "enter the elements matrix 1:5\n",
-            "enter the elements matrix 1:6\n",
-            "enter the elements matrix 2:7\n",
-            "enter the elements matrix 2:8\n",
-            "enter the elements matrix 2:9\n",
-            "enter the elements matrix 2:10\n",
-            "enter the elements matrix 2:11\n",
-            "enter the elements matrix 2:12\n",
-            "enter the elements matrix 2:13\n",
-            "enter the elements matrix 2:14\n",
-            "enter the elements matrix 2:15\n",
-            "enter the elements matrix 2:16\n",
-            "enter the elements matrix 2:17\n",
-            "enter the elements matrix 2:18\n",
-            "enter the elements matrix 2:19\n",
-            "enter the elements matrix 2:20\n",
-            "enter the elements matrix 2:21\n",
             "\n",
             " THe result is :\n",
             "\n",
-            "[[ 82.  88.  94. 100. 106.]\n",
-            " [190. 205. 220. 235. 250.]]\n"
+            "[[-0.15500863  0.74561036  0.49119812  2.0800598  -0.10793126]\n",
+            " [ 0.21981107  2.1322885   1.1040672   1.2545723   4.0279922 ]]\n"
           ],
           "name": "stdout"
         }
